--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-div {
+#box1 {
     height:50px;
     width:50px;
-    background-color: red;
+    background-image: url(myntra_logo.png);
+    background-size: contain;
 }
